# MathHash

./: .gitignore  LICENSE  README.md  pyproject.toml
mathhash/: __init__.py  core.py  engine.py  math_function.py  primes.py  test.py  utils.py
tests/: collision_test.py  math_hash_test.py
